--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0px;
 }
 .navcontainer{
-    background-color: black;
+    background-color: rgb(63, 59, 59);
     color: white;
     display: flex;
     justify-content: space-around;
@@ -18,6 +18,147 @@
     margin-right: 10px;
     padding: 10px;
 }
+.listitem:hover{
+    color: blue;
+}
 .listcontainer{
     display: flex;
 }
+
+.bannercontainer{
+    height: 100vh;
+    background-image: url("./images/background.png");
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+      
+}
+.img{
+    width: 300px;
+    height: 300px;
+}
+.th{
+    font-size: 50px;
+    font-weight: bolder;
+    margin-bottom: 10px;
+}
+.tp{
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+.btn{
+    background-color: red;
+    color: white;
+    padding: 10px;
+    border-style: none;
+}
+.aboutcontainer{
+    height: 400px;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+    align-items: center;
+}
+.about{
+    text-align: center;
+    font-size: 80px;
+    margin: 10px;
+    
+}
+.textcontainer{
+    width: 400px;
+}
+
+.tht{
+    font-size: 30px;
+}
+
+.sectionservice{
+    height: 70vh;
+    background-color: rgb(48, 40, 40);
+    color: white;
+    background-image: url("./images/background.png");
+}
+.servicecontainer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 20px;
+}
+.sdiv{
+    width: 200px;
+    height: 280px;
+    box-shadow: 4px  2px 105px gray;
+    text-align: center;
+    border-radius: 10px;
+    
+}
+.iconimg{
+    width: 80px;
+    height: 80px;
+    padding: 15px;
+}
+.sh{
+    font-size: 50px;
+    font-weight: bolder;
+    text-align: center;
+    padding: 15px;
+}
+.sp{
+    padding: 15px;
+}
+.btns{
+    background-color: grey;
+    color: white;
+    padding:5px 10px;
+    border-style: none;
+}
+.footer{
+    background-color: black;
+    color: white;
+    height: 70vh;
+}
+.footcontainer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.box{
+    margin-top: 50px;
+    padding: 20px;
+    height: 240px;
+    width: 230px;
+}
+a{
+    text-decoration: none;
+    color: white;
+    display: block;
+    padding: 10px;
+}
+address{
+    font-style: normal;
+    line-height: 30px;
+}
+.copy{
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 10px;
+   
+}
+.hrcontainer{
+    width: 100%;
+    height: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+
+}
+.midhr{
+    width: 80%;
+}
+
+    
+   
